--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/Miunie"]
 	path = src/Miunie
-	url = git@github.com:control-net/Miunie.git
+	url = https://github.com/control-net/miunie.git
